--- a/cache_simulator/pom.xml
+++ b/cache_simulator/pom.xml
@@ -9,6 +9,40 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>de.sga.cache_simulator.CacheCoherenceSimulator</exec.mainClass>
+        <exec.mainClass>de.sga.cache_simulator.Controller</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+    </dependencies>
+    <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+          <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+              <manifest>
+                <mainClass>de.sga.cache_simulator.Controller</mainClass>
+              </manifest>
+          </archive>
+      </configuration>
+      <executions>
+          <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+          </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
 </project>
